# Coeus

./: .gitignore  .poetry-cat.sh.swp  README.md  pyproject.toml
assets/JSON-old/: AAC(6')-Iy.html  AAC(6')-Iy.json  CRP.html  CRP.json  Ec_AcrAB-TolC.html  Ec_AcrAB-TolC.json  Ec_EF-Tu.html  Ec_EF-Tu.json  Ec_GlpT.html  Ec_GlpT.json  Ec_UhpT.json  Ec_acrA.json  Ec_mdfA.json  Ec_soxR.html  Ec_soxR.json  Ec_soxS.json  FosA7.html  FosA7.json  Hi_PBP3.json  Kp_KpnE.html  Kp_KpnE.json  Kp_KpnF.json  MdtK.html  MdtK.json  PmrF.json  TEM-60.html  TEM-60.json  acrB.json  acrD.json  bacA.html  bacA.json  baeR.json  cpxA.html  cpxA.json  emrA.html  emrA.json  emrB.json  emrR.html  emrR.json  golS.html  (+20 more)
assets/clustering/DBSCAN/: AAC_6_Iy.html  CRP.html  Ec_AcrABTolC.html  Ec_GlpT.html  Hi_PBP3.html  Kp_KpnF.html  PmrF.html  TEM60.html  acrB.html  baeR.html  kdpE.html  mdsA.html  mdsB.html  mdsC.html  mdtB.html  mdtC.html  mdtM.html  msbA.html  rsmA.html  ugd.html
assets/clustering/MCL/: AAC_6_Iy.html  CRP.html  Ec_AcrABTolC.html  Ec_mdfA.html  FosA7.html  Kp_KpnF.html  MdtK.html  PmrF.html  baeR.html  cpxA.html  emrA.html  emrB.html  emrR.html  marA.html  mdsA.html  mdsC.html  mdtB.html  rsmA.html  sdiA.html  ugd.html
assets/clustering/UPGMA/: AAC_6_Iy.html  CRP.html  Ec_UhpT.html  Ec_soxR.html  Ec_soxS.html  Hi_PBP3.html  Kp_KpnE.html  PmrF.html  TEM60.html  acrB.html  acrD.html  bacA.html  cpxA.html  emrA.html  emrB.html  emrR.html  marA.html  mdsB.html  mdsC.html  mdtM.html  msbA.html  rsmA.html  sdiA.html  ugd.html
coeus/: coeus.py
coeus/assets/: clustering
coeus/assets/clustering/DBSCAN/: AAC_6_Iy.html  CRP.html  Ec_AcrABTolC.html  Ec_GlpT.html  Ec_UhpT.html  Ec_acrA.html  Ec_mdfA.html  Ec_soxR.html  Ec_soxS.html  FosA7.html  Hi_PBP3.html  Kp_KpnE.html  Kp_KpnF.html  MdtK.html  PmrF.html  TEM60.html  acrB.html  acrD.html  bacA.html  baeR.html  cpxA.html  emrA.html  emrB.html  emrR.html  golS.html  kdpE.html  marA.html  mdsA.html  mdsB.html  mdsC.html  mdtB.html  mdtC.html  mdtM.html  msbA.html  rsmA.html  sdiA.html  ugd.html
coeus/assets/clustering/MCL/: AAC_6_Iy.html  CRP.html  Ec_AcrABTolC.html  Ec_EFTu.html  Ec_GlpT.html  (+33 more)
coeus/assets/clustermap/: JSON  package-lock.json
coeus/sample_data/: Neighborhoods_Extraction_Summary.txt  clustering_summary.csv
coeus/sample_data/FAA/: SA20153980.faa  SA20153983.faa  SA20160170.faa  SA20160172.faa  SA20160190.faa  SA20160197.faa  SA20160200.faa  SA20160201.faa  SA20160203.faa  SA20160209.faa  SA20160210.faa  SA20160228.faa  SA20160323.faa  SA20160326.faa
coeus/sample_data/JSON/: AAC6_Iy.html  AAC6_Iy.json  AAC6_Iy_surrogates.html  AAC6_Iy_surrogates.json  AAC6_Iy_upgma.html  AAC6_Iy_upgma.json  AAC_6_Iy_surrogates.html  AAC_6_Iy_surrogates.json  AAC_6_Iy_upgma.html  AAC_6_Iy_upgma.json  CRP.html  CRP.json  CRP_surrogates.html  CRP_surrogates.json  CRP_upgma.html  CRP_upgma.json  Ec_AcrABTolC.html  Ec_AcrABTolC.json  Ec_AcrABTolC_surrogates.html  Ec_EFTu.json  Ec_EFTu_surrogates.html  Ec_EFTu_surrogates.json  Ec_EF_Tu.html  Ec_EF_Tu.json  Ec_EF_Tu_surrogates.html  Ec_EF_Tu_surrogates.json  Ec_EF_Tu_upgma.html  Ec_EF_Tu_upgma.json  Ec_GlpT.html  Ec_GlpT.json  Ec_GlpT_surrogates.html  Ec_GlpT_surrogates.json  Ec_GlpT_upgma.html  Ec_GlpT_upgma.json  Ec_UhpT.html  Ec_UhpT.json  Ec_UhpT_surrogates.html  Ec_UhpT_surrogates.json  Ec_UhpT_upgma.html  Ec_UhpT_upgma.json  (+220 more)
coeus/sample_data/RGI/: SA20153980_rgi.txt  SA20153983_rgi.txt  SA20160170_rgi.txt  SA20160172_rgi.txt  SA20160190_rgi.txt  SA20160197_rgi.txt  SA20160200_rgi.txt  SA20160201_rgi.txt  SA20160203_rgi.txt  SA20160209_rgi.txt  SA20160210_rgi.txt  SA20160228_rgi.txt  SA20160323_rgi.txt  SA20160326_rgi.txt
(+602 files in other folders)
