[tool.poetry]
name = "coeus"
version = "0.1.0"
description = "A Plotly dashboard to facilitate visual exploration of gene neighborhood data."
license = "MIT"
authors = ["Julia <JuliaL@dal.ca>"]
readme = "README.md"
homepage = "https://github.com/JTL-lab/coeus"
repository = "https://github.com/JTL-lab/coeus"
keywords = ["coeus", "gene order", "clustering", "visualisation"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.7.1"
dash-bootstrap-components = "^1.3.0"
flask = "^2.2.2"
ipython = "^8.8.0"
itsdangerous = "2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
