[tool.poetry]
name = "coeus"
version = "0.1.0"
description = "A Plotly dashboard to facilitate visual exploration of gene neighborhood data."
license = "MIT"
authors = ["Julia <JuliaL@dal.ca>"]
readme = "README.md"
homepage = "https://github.com/JTL-lab/coeus"
repository = "https://github.com/JTL-lab/coeus"
keywords = ["coeus", "gene order", "clustering", "visualisation"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
dash = {extras = ["diskcache"], version = "^2.9.2"}
dash-bootstrap-components = "1.2.1"
flask = "2.2.2"
ipython = "8.6.0"
itsdangerous = "2.1.2"
biopython = "1.79"
pandas = "1.3.5"
alembic = "1.8.1"
asttokens = "2.1.0"
attrs = "22.1.0"
autopage = "0.5.1"
backcall = "0.2.0"
bio = "1.3.9"
biothings-client = "0.2.6"
cachecontrol = "0.12.11"
certifi = "2022.9.24"
charset-normalizer = "2.1.1"
click = "8.1.3"
cliff = "4.0.0"
cmaes = "0.8.2"
cmd2 = "2.4.2"
colorlog = "6.7.0"
cycler = "0.11.0"
cython = "0.29.32"
dash-bootstrap-templates = "1.0.7"
dash-core-components = "2.0.0"
dash-html-components = "2.0.0"
dash-table = "5.0.0"
decorator = "5.1.1"
executing = "1.2.0"
fonttools = "4.38.0"
greenlet = "2.0.0.post0"
h5py = "3.7.0"
hdmedians = "0.14.2"
idna = "3.4"
importlib-metadata = "5.0.0"
importlib-resources = "5.10.0"
jedi = "0.18.1"
jinja2 = "3.1.2"
joblib = "1.2.0"
kiwisolver = "1.4.4"
lockfile = "0.12.2"
mako = "1.2.3"
markupsafe = "2.1.1"
matplotlib = "3.5.3"
matplotlib-inline = "0.1.6"
msgpack = "1.0.4"
mygene = "3.2.2"
natsort = "8.2.0"
networkx = "2.8.8"
numpy = "1.22.4"
packaging = "21.3"
parso = "0.8.3"
pbr = "5.11.0"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pillow = "9.3.0"
plotly = "5.4.0"
prettytable = "3.5.0"
prompt-toolkit = "3.0.32"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pygments = "2.13.0"
pyparsing = "3.0.9"
pyperclip = "1.8.2"
python-dateutil = "2.8.2"
pytz = "2022.6"
pyyaml = "6.0"
requests = "2.28.1"
scipy = "1.8"
six = "1.16.0"
sqlalchemy = "1.4.42"
stack-data = "0.6.0"
stevedore = "4.1.0"
tenacity = "8.1.0"
threadpoolctl = "3.1.0"
tqdm = "4.64.1"
traitlets = "5.5.0"
urllib3 = "1.26.12"
wcwidth = "0.2.5"
werkzeug = "2.2.2"
zipp = "3.10.0"
markov-clustering = "0.0.6.dev0"
patsy = "0.5.3"
plotly-express = "0.4.1"
scikit-bio = "0.5.7"
scikit-learn = "1.0.2"
statsmodels = "0.13.5"
diskcache = "^5.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

