[tool.poetry]
name = "coeus"
version = "0.1.0"
description = ""
authors = ["julia <jl228931@dal.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
numpy = "^1.25.1"
pandas = "^2.0.3"
dash = "^2.11.1"
dash-bootstrap-components = "^1.4.2"
scipy = "^1.11.1"
networkx = "^3.1"
markov-clustering = "^0.0.6.dev0"
plotly = "^5.15.0"
scikit-learn = "^1.3.0"
scikit-bio = "^0.5.8"
diskcache = "^5.6.1"
multiprocess = "^0.70.14"
psutil = "^5.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
